--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,15 @@ nav {
   align-items: center;
 }
 
+.nav__logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav__title {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 800;
 }
 
@@ -37,4 +44,10 @@ nav {
 
 .nav__title--orange {
   color: #f29643;
+}
+
+.nav__logo img {
+  width: 3rem;
+  height: 3rem;
+  margin-left: 0.8rem;
 }
