--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap');
 
+:root {
+  --black: #393939;
+  --orange: #f29643;
+}
+
 html {
   font-size: 10px; /* For making it easier to use rem */
 }
@@ -14,40 +19,18 @@ html * {
   box-sizing: border-box;
 }
 
-nav {
-  height: 50px;
-  background-color: #f7f7f7;
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
 }
 
-.nav__container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
 }
 
-.nav__logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
 }
 
-.nav__title {
-  font-size: 2rem;
-  font-weight: 800;
-}
-
-.nav__title--black {
-  color: #393939;
-}
-
-.nav__title--orange {
-  color: #f29643;
-}
-
-.nav__logo img {
-  width: 3rem;
-  height: 3rem;
-  margin-left: 0.8rem;
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
