--- a/css/nav.css
+++ b/css/nav.css
@@ -52,6 +52,13 @@ nav {
   height: 3rem;
 
   font-size: 1.5rem;
+
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+
+.nav__search * {
+  border-radius: 0.5rem;
 }
 
 .nav__input {
@@ -61,7 +68,6 @@ nav {
 
   padding: 0.25rem 1rem;
 
-  border-radius: 0.5rem;
   border: 1px solid #c1c1c1;
 
   background-color: transparent;
@@ -69,6 +75,8 @@ nav {
 
 .nav__input:focus {
   outline-color: var(--orange);
+  background-color: var(--white);
+  box-shadow: 0 0 0.8rem 0 var(--orange);
 }
 
 .nav__input:focus + .nav__placeholder {
@@ -83,6 +91,7 @@ nav {
   bottom: 0;
 
   color: #c1c1c1;
+  font-weight: 600;
   line-height: 3rem;
   text-align: center;
 
@@ -91,6 +100,37 @@ nav {
 
 .nav__placeholder .icon-search {
   margin-right: 0.5rem;
+}
+
+.nav__group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 1.5rem;
+}
+
+.nav__group * {
+  margin-right: 2rem;
+}
+
+.nav__group:last-child {
+  margin-right: 0;
+}
+
+.nav__avatar {
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+
+  font-weight: 600;
+  text-align: center;
+  color: var(--black);
+
+  border-radius: 100%;
+
+  background-color: var(--gray);
 }
 
 /* Small devices (landscape phones, 576px and up) */
@@ -110,6 +150,10 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .nav__container > div {
+    margin-bottom: 0;
   }
 
   .nav__search {
