--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,9 @@
 }
 
 html {
+  height: 100vh;
   min-width: 320px;
+
   font-size: 10px; /* For making it easier to use rem */
 }
 
@@ -20,6 +22,15 @@ html * {
   font-family: 'Open Sans', sans-serif;
 
   box-sizing: border-box;
+}
+
+body {
+  min-height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 .btn {
