--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,103 @@
 .main {
   flex-grow: 1;
 
-  font-size: 1.5rem;
+  /* Using padding: 2rem 0 will overrride padding of .container */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
-  border: 1px solid black;
+  font-size: 1.5rem;
+}
+
+.main__title {
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: var(--light-black);
+
+  margin-bottom: 1.5rem;
+}
+
+.grid {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-wrap: wrap;
+}
+
+.grid__item {
+  flex-grow: 1;
+
+  min-width: 30rem;
+  height: 30rem;
+
+  margin-bottom: 2rem;
+}
+
+.grid__item:nth-last-child(1) {
+  margin-bottom: 0;
+}
+
+.grid__item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .grid__item {
+    min-width: 25rem;
+    max-width: 50%;
+    height: 25rem;
+  }
+
+  .grid__item:nth-child(odd) {
+    padding: 0 1rem 0 0;
+  }
+
+  .grid__item:nth-child(even) {
+    padding: 0 0 0 1rem;
+  }
+
+  .grid__item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .grid__item {
+    min-width: 30rem;
+    max-width: 50%;
+    height: 30rem;
+  }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .grid__item {
+    min-width: 30rem;
+    max-width: calc(100% / 3);
+    height: 30rem;
+  }
+
+  .grid__item:nth-child(3n + 1) {
+    padding: 0 1rem 0 0;
+  }
+
+  .grid__item:nth-child(3n + 2) {
+    padding: 0 0.5rem 0 0.5rem;
+  }
+
+  .grid__item:nth-child(3n + 3) {
+    padding: 0 0 0 1rem;
+  }
+
+  .grid__item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
 }
