--- a/css/main.css
+++ b/css/main.css
@@ -17,24 +17,20 @@
 }
 
 .grid {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: stretch;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: auto;
+
+  row-gap: 2rem;
+  column-gap: 2rem;
+
+  place-items: stretch stretch;
 }
 
 .grid__item {
-  flex-grow: 1;
+  position: relative;
 
-  min-width: 30rem;
-  height: 30rem;
-
-  margin-bottom: 2rem;
-}
-
-.grid__item:nth-last-child(1) {
-  margin-bottom: 0;
+  width: 100%;
+  height: auto;
 }
 
 .grid__item img {
@@ -43,58 +39,36 @@
   object-fit: cover;
 }
 
+.grid__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  padding: inherit;
+
+  color: white;
+  text-align: right;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-  .grid__item {
-    min-width: 25rem;
-    max-width: 50%;
-    height: 25rem;
-  }
-
-  .grid__item:nth-child(odd) {
-    padding: 0 1rem 0 0;
-  }
-
-  .grid__item:nth-child(even) {
-    padding: 0 0 0 1rem;
-  }
-
-  .grid__item:nth-last-child(-n + 2) {
-    margin-bottom: 0;
+  .grid {
+    grid-template-columns: auto auto;
   }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  .grid__item {
-    min-width: 30rem;
-    max-width: 50%;
-    height: 30rem;
-  }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-  .grid__item {
-    min-width: 30rem;
-    max-width: calc(100% / 3);
-    height: 30rem;
-  }
-
-  .grid__item:nth-child(3n + 1) {
-    padding: 0 1rem 0 0;
-  }
-
-  .grid__item:nth-child(3n + 2) {
-    padding: 0 0.5rem 0 0.5rem;
-  }
-
-  .grid__item:nth-child(3n + 3) {
-    padding: 0 0 0 1rem;
-  }
-
-  .grid__item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+  .grid {
+    grid-template-columns: auto auto auto;
   }
 }
 
