--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,10 @@
   --white: #ffffff;
   --black: #393939;
   --orange: #f29643;
-  --overlay: #000000;
   --light-bg: #f7f7f7;
   --light-black: #414141;
   --secondary-text: #7f7f7f;
+  --black-50: rgba(0, 0, 0, 0.5);
 }
 
 html {
