--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@
   cursor: pointer;
 }
 
+.grid__item-container:hover .grid__overlay {
+  opacity: 1;
+}
+
 .grid__item {
   position: relative;
 
@@ -52,17 +56,13 @@
   padding: 0.5rem;
 
   color: var(--white);
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-align: right;
 
   opacity: 0;
   background-color: var(--black-50);
 
   transition: opacity 300ms ease;
-}
-
-.grid__overlay:hover {
-  opacity: 1;
 }
 
 .grid__modal {
@@ -73,7 +73,7 @@
   opacity: 0;
   background-color: var(--black-50);
 
-  z-index: -1;
+  z-index: var(--z-0);
 
   transition: all 500ms ease;
 
@@ -82,7 +82,7 @@
 
 .grid__modal--show {
   opacity: 1;
-  z-index: 100;
+  z-index: var(--item-modal);
 }
 
 /* Small devices (landscape phones, 576px and up) */
