--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -1,46 +1,12 @@
 .confirmation {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  right: 50%;
-  bottom: 50%;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  opacity: 0;
-  z-index: var(--z-0);
-
-  overflow: hidden;
-
-  background-color: var(--black-50);
-
-  transition: all 500ms ease;
-}
-
-.confirmation--show {
-  display: flex;
-
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  opacity: 1;
-  z-index: var(--confirmation);
-}
-
-.confirmation__dialogue {
-  min-width: 32rem;
-  max-width: 32rem;
-  margin: auto;
-
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+
+  min-width: 32rem;
+  max-width: 32rem;
 
   margin: 1rem;
   padding: 2rem;
@@ -53,7 +19,7 @@
   background-color: var(--light-bg);
 }
 
-.confirmation__msg {
+.confirmation__title {
   min-width: 100%;
 
   font-size: 2.5rem;
