--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --orange: #f29643;
   --light-bg: #f7f7f7;
   --light-black: #414141;
+  --input-border: #c1c1c1;
   --secondary-text: #7f7f7f;
   --btn-no-highlight: #6c757d;
   --black-50: rgba(0, 0, 0, 0.5);
