--- a/css/upload.css
+++ b/css/upload.css
@@ -79,7 +79,10 @@
 }
 
 .form__input--image {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   color: var(--secondary-text);
 
   border-color: var(--gray);
@@ -182,6 +185,12 @@
 
   .form__input {
     flex-grow: 1;
+    height: 4rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .form__input--large {
+    height: 10rem;
   }
 
   .form__preview {
@@ -209,6 +218,10 @@
     margin-right: 1.5rem; /* Because of close button */
   }
 
+  .form__input {
+    padding: 1rem;
+  }
+
   .form__input--image {
     flex-grow: 0;
     width: 20rem;
@@ -219,10 +232,6 @@
 
     width: 7rem;
     height: 7rem;
-  }
-
-  .form__input--large {
-    height: 10rem;
   }
 }
 
