--- a/css/main.css
+++ b/css/main.css
@@ -66,9 +66,11 @@
 }
 
 .grid__modal {
-  /* display: block !important; */
-
   position: fixed;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   opacity: 0;
   background-color: var(--black-50);
@@ -76,11 +78,83 @@
   z-index: var(--z-0);
 
   transition: all 500ms ease;
+
+  overflow: hidden;
 }
 
 .grid__modal--show {
   opacity: 1;
   z-index: var(--item-modal);
+}
+
+.modal-content {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+
+  min-width: 31rem;
+  max-width: 31rem;
+
+  opacity: inherit;
+
+  transition: all 300ms ease;
+}
+
+.modal-content__close {
+  position: absolute;
+  top: 0.25rem;
+  right: 0.5rem;
+
+  font-size: 3rem;
+  color: var(--white);
+
+  transition: all 300ms ease;
+}
+
+.modal-content__img {
+  width: 100%;
+  height: auto;
+}
+
+.modal-content__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+
+  color: var(--black);
+
+  padding: 1rem;
+  background-color: var(--light-bg);
+}
+
+.modal-content__description {
+  font-size: 1.5rem;
+
+  padding-bottom: 1rem;
+  border-bottom: 2px solid var(--input-border);
+}
+
+.modal-content__description h4 {
+  margin-bottom: 0.5rem;
+}
+
+.modal-content__paw-fives {
+  padding-top: 1rem;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content__paw-fives img {
+  width: 4rem;
+  height: 4rem;
+  margin-right: 1.5rem;
 }
 
 .main__load-more {
@@ -118,6 +192,14 @@
   cursor: pointer;
 }
 
+/* Extra one for modla close button */
+@media (min-width: 400px) {
+  .modal-content__close {
+    top: 0.25rem;
+    right: -4rem;
+  }
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
   .main {
@@ -126,6 +208,32 @@
 
   .grid {
     grid-template-columns: auto auto;
+  }
+
+  .modal-content {
+    min-width: 50rem;
+    max-width: 50rem;
+  }
+
+  .modal-content__info {
+    flex-direction: row;
+    padding: 2rem;
+  }
+
+  .modal-content__description {
+    flex-grow: 1;
+
+    padding-bottom: 0;
+    padding-right: 2rem;
+    border-bottom: none;
+    border-right: 2px solid var(--input-border);
+  }
+
+  .modal-content__paw-fives {
+    flex-shrink: 0;
+
+    padding-top: 0rem;
+    padding-left: 2rem;
   }
 }
 
