--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+.content-message {
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 5rem;
+  font-weight: 700;
+
+  /* Using padding: 2rem 0 will overrride padding of .container */
+  padding: 2rem 1rem;
+}
+
 .main {
   flex-grow: 1;
 
