--- a/css/puppygram.css
+++ b/css/puppygram.css
@@ -21,6 +21,8 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  cursor: pointer;
 }
 
 .icon-search:before {
