--- a/css/main.css
+++ b/css/main.css
@@ -188,6 +188,12 @@
   color: var(--secondary-text);
 
   margin: 2rem auto;
+
+  cursor: pointer;
+}
+
+.main__load-more:hover {
+  color: var(--black);
 }
 
 .main__selector {
