--- a/css/nav.css
+++ b/css/nav.css
@@ -159,6 +159,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 0;
   }
 
   .nav__container > div {
