--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@
 .grid__item img {
   width: 100%;
   height: 100%;
+
   object-fit: cover;
 }
 
@@ -133,7 +134,9 @@
 .modal-content__img {
   width: 100%;
   height: auto;
-  max-height: 20rem;
+  max-height: 31rem;
+
+  object-fit: cover;
 }
 
 .modal-content__info {
@@ -227,9 +230,13 @@
 
 /* Extra one for modal close button */
 @media (min-width: 400px) {
-  .modal-content__close {
-    top: 0.25rem;
-    right: -4rem;
+  .modal-content {
+    min-width: 39rem;
+    max-width: 39rem;
+  }
+
+  .modal-content__img {
+    max-height: 39rem;
   }
 }
 
@@ -244,7 +251,7 @@
   }
 
   .grid__item-container {
-    height: 20rem;
+    height: 26rem;
   }
 
   .modal-content {
@@ -252,8 +259,13 @@
     max-width: 50rem;
   }
 
+  .modal-content__close {
+    top: 0.25rem;
+    right: -4rem;
+  }
+
   .modal-content__img {
-    max-height: 30rem;
+    max-height: 50rem;
   }
 
   .modal-content__info {
@@ -281,7 +293,7 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   .grid__item-container {
-    height: 27rem;
+    height: 35rem;
   }
 }
 
@@ -292,13 +304,13 @@
   }
 
   .grid__item-container {
-    height: 25rem;
+    height: 30.6rem;
   }
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
   .grid__item-container {
-    height: 27rem;
+    height: 36.6rem;
   }
 }
